--- a/Wheather app.html
+++ b/Wheather app.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />   
      <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>Weather app</title>
+    <title>Weather app1</title>
     
 
   </head>
